@@ -40,6 +40,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   b - fixed problem where momctl -d 0 showed ConfigVersion twice
   e - if a .JB file gets upgraded pbs_server will back up the original
   b - removed qhold / qrls -h n option since there is no code to support it 
+  b - set job state and substate correctly when job has a hold attribute and
+      is being rerun
 
 2.3.3
   b - fixed bug where pbs_mom would sometimes not connect properly with 
